--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">FuelCalculator</string>
+    <string name="input_label_origin">Origin</string>
+    <string name="input_label_destination">Destination</string>
+    <string name="submit_button_find_fuel">Calculate costs...</string>
 </resources>
