--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,11 @@
     <string name="input_label_origin">Origin</string>
     <string name="input_label_destination">Destination</string>
     <string name="submit_button_find_fuel">Calculate costs...</string>
+    <string name="car_tab_label">CARS</string>
+    <string name="fuel_tab_label">FUEL CALCULATOR</string>
+
+    <string name="section_format">Hello World from section: %1$d</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
